--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     />
   </head>
   <body class="page">
-    <!--   <aside
+    <aside
       class="page__menu menu"
       id="menu"
       onclick="window.location.href='#'"
@@ -133,7 +133,15 @@
           </p>
         </article>
       </div>
-    </aside> -->
+    </aside>
+
+    <aside class="page__to-top js-to-top">
+      <img
+        src="./images/icons/arrow-up.png"
+        alt="move to the top page"
+        class="page__arrow-up"
+      />
+    </aside>
 
     <header class="page__header">
       <div class="container header">
@@ -197,12 +205,12 @@
               <article class="event">
                 <picture class="event__img">
                   <source
-                    media="(min-width: 320px)"
-                    srcset="./images/pictures/event/event-1-m.png"
+                    media="(min-width: 1280px)"
+                    srcset="./images/pictures/event/event-1.png"
                   />
                   <source
-                    media="(min-width: 980px)"
-                    srcset="./images/pictures/event/event-1.png"
+                    media="(min-width: 320px)"
+                    srcset="./images/pictures/event/event-1-m.png"
                   />
                   <img
                     src="./images/pictures/event/event-1.png"
@@ -229,12 +237,12 @@
               <article class="event">
                 <picture class="event__img">
                   <source
-                    media="(min-width: 320px)"
-                    srcset="./images/pictures/event/event-2-m.png"
-                  />
-                  <source
                     media="(min-width: 1280px)"
                     srcset="./images/pictures/event/event-2.png"
+                  />
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="./images/pictures/event/event-2-m.png"
                   />
                   <img
                     src="./images/pictures/event/event-2.png"
@@ -298,7 +306,7 @@
                 />
               </li>
 
-              <li class="galery__slide js-slide">
+              <li class="galery__slide galery__slide--long js-slide">
                 <img
                   src="./images/pictures/galery/galery-2.png"
                   alt="Old Ukrainian village in winter paintint"
@@ -306,7 +314,7 @@
                 />
               </li>
 
-              <li class="galery__slide js-slide">
+              <li class="galery__slide galery__slide--long js-slide">
                 <img
                   src="./images/pictures/galery/galery-3.png"
                   alt="Girl with the telephone in the park painting"
@@ -325,21 +333,187 @@
           </div>
 
           <div class="galery__dots-for-slider">
-            <ul class="dots js-dots">
-              <!-- <li class="dots__item js-dot"></li>
+            <ul class="dots js-dots"></ul>
+          </div>
+        </div>
+      </section>
 
-              <li class="dots__item js-dot"></li>
+      <section
+        class="subscription"
+        id="subscription"
+      >
+        <div class="subscription__wrapper container">
+          <h3 class="subscription__title title title-m">Підписка</h3>
+          <p class="subscription__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
 
-              <li class="dots__item js-dot"></li>
+          <form class="subscription__form js-subscription-form">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              required
+              class="subscription__input"
+            />
+            <input
+              type="submit"
+              value=">"
+              class="subscription__button"
+            />
+          </form>
+        </div>
+      </section>
 
-              <li class="dots__item js-dot"></li> -->
-            </ul>
+      <section
+        class="contacts"
+        id="contacts"
+      >
+        <div class="container contacts__wrapper">
+          <div class="contacts__links links">
+            <a
+              href="#"
+              class="links__logo-link"
+            >
+              <img
+                src="./images/icons/logo.png"
+                alt="NA MU Conpamy logotype"
+                class="links__logo"
+              />
+            </a>
+
+            <div class="links__social">
+              <a
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                class="links__social-link"
+              >
+                <img
+                  src="./images/icons/facebook.png"
+                  alt="facebook link icon"
+                  class="links__social-link-icon"
+                />
+              </a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="links__social-link"
+              >
+                <img
+                  src="./images/icons/instagram.png"
+                  alt="instagram link icon"
+                  class="links__social-link-icon"
+                />
+              </a>
+            </div>
+          </div>
+
+          <div class="contacts__grouped">
+            <article class="contacts__working-hours working-hours">
+              <div class="working-hours__schedule-wrapper">
+                <h4 class="working-hours__title">Графік роботи</h4>
+                <ul class="working-hours__schedule">
+                  <li class="working-hours__day">
+                    <span class="working-hours__time">12:00 — 20:00</span>
+                    середа
+                  </li>
+                  <li class="working-hours__day">
+                    <span class="working-hours__time">12:00 — 20:00</span>
+                    четвер
+                  </li>
+                  <li class="working-hours__day">
+                    <span class="working-hours__time">12:00 — 20:00</span>
+                    п’ятниця
+                  </li>
+                  <li class="working-hours__day">
+                    <span class="working-hours__time">11:00 — 19:00</span>
+                    субота
+                  </li>
+                  <li class="working-hours__day">
+                    <span class="working-hours__time">11:00 — 19:00</span>
+                    неділя
+                  </li>
+                </ul>
+              </div>
+              <p class="working-hours__detalization">
+                Вихідні: понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </article>
+
+            <article class="contacts__touch touch">
+              <h4 class="touch__title">Контакти:</h4>
+              <a
+                href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%B8%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%BD%D1%96%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B8/@50.4492808,30.5297079,18z/data=!4m6!3m5!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4494274!4d30.5306505!16s%2Fm%2F02prqms?authuser=0&entry=ttu"
+                class="touch__address"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a
+                href="tel:+380442781357"
+                class="touch__tel"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <p class="touch__fax">факс +38 (044) 278-74-54</p>
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="touch__mail"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </article>
+          </div>
+
+          <div class="contacts__navigation">
+            <nav class="contacts__nav nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#galery"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#about"
+                    class="nav__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#exhibitions"
+                    class="nav__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#contacts"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="page__footer"></footer>
+    <footer class="page__footer footer container">
+      <p class="footer__designer">Designed by Zhyriada Marina</p>
+      <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+    </footer>
 
     <script
       src="scripts/main.js"
