--- a/src/index.html
+++ b/src/index.html
@@ -391,6 +391,7 @@
                   src="./images/icons/facebook.png"
                   alt="facebook link icon"
                   class="links__social-link-icon"
+                  target="_blank"
                 />
               </a>
               <a
@@ -401,6 +402,7 @@
                   src="./images/icons/instagram.png"
                   alt="instagram link icon"
                   class="links__social-link-icon"
+                  target="_blank"
                 />
               </a>
             </div>
