--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,514 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header" id="header">
+      <div class="container header__container">
+        <div class="header__content">
+          <a href="#" class="header__btn">
+            <img
+              src="./images/header/header__burger.svg"
+              alt="burger menu"
+              class="header__btn-img"
+            >
+          </a>
+
+          <a href="#header" class="header__logo">
+            <img
+              src="images/header/logo.svg"
+              alt="header bg"
+              class="header__background-img"
+            >
+          </a>
+
+          <div class="header__background"></div>
+
+          <h1 class="header__title">Художній музей</h1>
+
+          <div class="header__block tickets">
+            <h4 class="tickets__title">квитки</h4>
+
+            <a class="tickets__link">
+              <img
+                src="./images/subscribe/vector__subscribe.svg"
+                alt="link"
+                class="tickets__link-img"
+              >
+            </a>
+          </div>
+
+          <a href="#events" class="header__line">Події</a>
+        </div>
+      </div>
+    </header>
+
+    <nav class="nav nav__header nav__menu">
+      <div class="nav__content">
+        <a href="#" class="nav__close">
+          <img
+            src="./images/header/close.svg"
+            alt="Close menu"
+            class="nav__close-img"
+          >
+        </a>
+
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#gallery" class="nav__item-link"> Галерея </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#lections" class="nav__item-link"> Про Нас </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#events" class="nav__item-link"> Виставки та події </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#contacts" class="nav__item-link"> Контакти </a>
+          </li>
+        </ul>
+
+        <div class="nav__border"></div>
+
+        <div class="nav__block">
+          <ul class="nav__work">
+            Графік роботи
+            <li class="nav__work-item">
+              <span class="nav__work-span"> 12:00 — 20:00 </span>
+
+              середа
+            </li>
+
+            <li class="nav__work-item">
+              <span class="nav__work-span"> 12:00 — 20:00 </span>
+
+              четвер
+            </li>
+
+            <li class="nav__work-item">
+              <span class="nav__work-span"> 12:00 — 20:00 </span>
+
+              п’ятниця
+            </li>
+
+            <li class="nav__work-item">
+              <span class="nav__work-span"> 11:00 — 19:00 </span>
+
+              субота
+            </li>
+
+            <li class="nav__work-item">
+              <span class="nav__work-span"> 11:00 — 19:00 </span>
+
+              неділя
+            </li>
+          </ul>
+
+          <h5 class="nav__subtitle">
+            <span class="nav__subtitle-span"> Вихідні: </span>
+
+            понеділок, вівторок <br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </h5>
+        </div>
+      </div>
+
+      <div class="nav__background"></div>
+    </nav>
+
+    <main id="main">
+      <section class="section__events events" id="events">
+        <div class="container">
+          <div class="events__content">
+            <h2 class="events__title">Актуальні події</h2>
+
+            <div class="events__gallery">
+              <img
+                class="events__img"
+                src="./images/events/events_desktop.png"
+                alt="Events first"
+              >
+
+              <div class="events__block current">
+                <div class="current__block">
+                  <h4 class="current__text">ВИСТАВКА</h4>
+
+                  <span class="current__date">26.08-29.11.2019</span>
+                </div>
+
+                <h3 class="current__title">Йду і повертаюсь</h3>
+
+                <h5 class="current__subtitle">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </h5>
+              </div>
+            </div>
+
+            <div class="events__gallery">
+              <img
+                class="events__img"
+                src="./images/events/events_desktop_2.png"
+                alt="Events first"
+              >
+
+              <div class="events__block current">
+                <div class="current__block">
+                  <h4 class="current__text">ВИСТАВКА</h4>
+
+                  <span class="current__date">26.08-29.11.2019</span>
+                </div>
+
+                <h3 class="current__title">І спогади і мрії</h3>
+
+                <h5 class="current__subtitle">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section__footer lections" id="lections">
+        <div class="container wrapper">
+          <div class="lections__wrapper">
+            <div class="lections__content">
+              <div class="lections__block">
+                <span class="lections__lections">ЛЕКЦІЯ</span>
+
+                <span class="lections__date">26/08/2019 - 11:00</span>
+              </div>
+
+              <h3 class="lections__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section__gallery gallery" id="gallery">
+        <div class="container">
+          <div class="gallery__content">
+            <h2 class="gallery__title">Галерея</h2>
+
+            <div class="gallery__gallery">
+              <img
+                src="./images/gallery/gallery__1.png"
+                alt="gallery photo"
+                class="gallery__img gallery__img--1"
+              >
+
+              <img
+                src="./images/gallery/gallery__2.png"
+                alt="gallery photo"
+                class="gallery__img gallery__img--2"
+              >
+
+              <img
+                src="./images/gallery/gallery__3.png"
+                alt="gallery photo"
+                class="gallery__img gallery__img--3"
+              >
+
+              <img
+                src="./images/gallery/gallery__4.png"
+                alt="gallery photo"
+                class="gallery__img gallery__img--4"
+              >
+            </div>
+
+            <div class="gallery__wrapper">
+              <div class="gallery__rectangle">
+                <svg
+                  width="9"
+                  height="9"
+                  viewBox="0 0 9 9"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle
+                    class="gallery__circle"
+                    cx="4.5"
+                    cy="4.5"
+                    r="4.5"
+                    fill="#E0E0E0"
+                  >
+                </svg>
+
+                <svg
+                  width="9"
+                  height="9"
+                  viewBox="0 0 9 9"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle
+                    class="gallery__circle"
+                    cx="4.5"
+                    cy="4.5"
+                    r="4.5"
+                    fill="#E0E0E0"
+                  >
+                </svg>
+
+                <svg
+                  width="9"
+                  height="9"
+                  viewBox="0 0 9 9"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle
+                    class="gallery__circle"
+                    cx="4.5"
+                    cy="4.5"
+                    r="4.5"
+                    fill="#E0E0E0"
+                  >
+                </svg>
+
+                <svg
+                  width="9"
+                  height="9"
+                  viewBox="0 0 9 9"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle
+                    class="gallery__circle"
+                    cx="4.5"
+                    cy="4.5"
+                    r="4.5"
+                    fill="#E0E0E0"
+                  >
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section__subscribe subscribe" id="subscribe">
+        <div class="subscribe__wrapper">
+          <div class="container">
+            <div class="subscribe__content">
+              <h2 class="subscribe__title">Підписка</h2>
+
+              <h5 class="subscribe__subtitle">
+                Бути в курсі всіх актуальних подій та останніх новин.
+              </h5>
+
+              <div class="subscribe__block">
+                <form
+                  action="#"
+                  method="post"
+                  class="subscribe__form"
+                  id="subscribeForm"
+                >
+                  <input
+                    type="text"
+                    class="subscribe__input"
+                    placeholder="E-mail"
+                    id="emailInput"
+                  >
+
+                  <button
+                    class="subscribe__btn"
+                    id="submitButton"
+                    type="submit"
+                  >
+                    <img
+                      src="./images/subscribe/vector__subscribe.svg"
+                      alt="links"
+                      class="subscribe__link-img"
+                    >
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a href="#header" class="footer__logo">
+              <img
+                src="./images/header/logo.svg"
+                alt="Omay"
+                class="footer__logo-img"
+              >
+            </a>
+
+            <div class="footer__social">
+              <a
+                href="https://www.instagram.com/"
+                class="footer__link"
+                target="_blank"
+              >
+                <img
+                  src="./images/footer/facebook.svg"
+                  alt="facebook"
+                  class="footer__facebook"
+                >
+              </a>
+
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="footer__link"
+                target="_blank"
+              >
+                <img
+                  src="./images/footer/insta.svg"
+                  alt="instagram"
+                  class="footer__instagram"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__work work">
+            <div class="work__block">
+              <h3 class="work__title">Графік роботи</h3>
+
+              <ul class="work__list">
+                <li class="work__item">
+                  <span class="work__item-span"> 12:00 — 20:00 </span>
+
+                  середа
+                </li>
+
+                <li class="work__item">
+                  <span class="work__item-span"> 12:00 — 20:00 </span>
+
+                  четвер
+                </li>
+
+                <li class="work__item">
+                  <span class="work__item-span"> 12:00 — 20:00 </span>
+
+                  пятниця
+                </li>
+
+                <li class="work__item">
+                  <span class="work__item-span"> 11:00 — 19:00 </span>
+
+                  субота
+                </li>
+
+                <li class="work__item">
+                  <span class="work__item-span"> 11:00 — 19:00 </span>
+
+                  неділя
+                </li>
+              </ul>
+
+              <h4 class="work__subtitle">
+                Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до
+                закриття музею
+              </h4>
+            </div>
+
+            <div class="work__contact" id="contacts">
+              <h3 class="work__title">Контакти:</h3>
+
+              <ul class="work__list">
+                <li class="work__item">
+                  <a
+                    href="https://maps.app.goo.gl/92Tsx4RuoMNVv4XJ9"
+                    class="work__link"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+
+                <li class="work__item">
+                  <a href="tel:+380442781357" class="work__link">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                </li>
+
+                <li class="work__item">
+                  <a href="tel:+380442787454" class="work__link">
+                    факс +38 (044) 278-74-54
+                  </a>
+                </li>
+
+                <li class="work__item">
+                  <a href="mailto:info@namu.kiev.ua" class="work__link">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="work__btn">
+              <a href="#main" class="work__btn-link">
+                <img
+                  src="./images/footer/Arrow.svg"
+                  alt="go top"
+                  class="work__btn-img"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="work__border"></div>
+
+          <div class="footer__menu">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#gallery" class="footer__item-link"> Галерея </a>
+              </li>
+
+              <li class="footer__item">
+                <a href="#lections" class="footer__item-link"> Про Нас </a>
+              </li>
+
+              <li class="footer__item">
+                <a href="#events" class="footer__item-link">
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="footer__item">
+                <a href="#contacts" class="footer__item-link"> Контакти </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__author">
+          <span class="footer__author-title">
+            Designed by Zhyriada Marina
+          </span>
+
+          <span class="footer__author-title">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
