--- a/src/index.html
+++ b/src/index.html
@@ -322,10 +322,12 @@
                   id="subscribeForm"
                 >
                   <input
-                    type="text"
+                    type="email"
                     class="subscribe__input"
                     placeholder="E-mail"
                     id="emailInput"
+                    minlength="5"
+                    required
                   >
 
                   <button
