--- a/src/index.html
+++ b/src/index.html
@@ -367,11 +367,19 @@
                 class="footer__link"
                 target="_blank"
               >
-                <img
-                  src="./images/footer/facebook.svg"
-                  alt="facebook"
-                  class="footer__facebook"
+                <svg 
+                  width="12"
+                  height="24"
+                  viewBox="0 0 12 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="footer__logo-icon"
                 >
+                  <path
+                    d="M2.80699 4.64899C2.80699 5.2538 2.80699 7.9533 2.80699 7.9533H0.389923V11.9938H2.80699V24.0009H7.77217V11.9942H11.104C11.104 11.9942 11.4161 10.0568 11.5673 7.93841C11.1337 7.93841 7.79094 7.93841 7.79094 7.93841C7.79094 7.93841 7.79094 5.58776 7.79094 5.17573C7.79094 4.76282 8.3323 4.2074 8.86736 4.2074C9.40141 4.2074 10.5286 4.2074 11.5726 4.2074C11.5726 3.65727 11.5726 1.75647 11.5726 0.000976577C10.1789 0.000976577 8.59331 0.000976577 7.8944 0.000976577C2.68426 0.000697581 2.80699 4.04524 2.80699 4.64899Z"
+                    fill="black"
+                  />
+                </svg>
               </a>
 
               <a
@@ -379,11 +387,30 @@
                 class="footer__link"
                 target="_blank"
               >
-                <img
-                  src="./images/footer/insta.svg"
-                  alt="instagram"
-                  class="footer__instagram"
+                <svg 
+                  width="25"
+                  height="24"
+                  viewBox="0 0 25 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="footer__logo-icon"
                 >
+                  <g clip-path="url(#clip0_320_223)">
+                    <path d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z" fill="black"/>
+                    <path d="M12.0874 6.84473C9.24487 6.84473 6.93207 9.15734 6.93207 12.0001C6.93207 14.8426 9.24487 17.1554 12.0874 17.1554C14.9301 17.1554 17.2427 14.8426 17.2427 12.0001C17.2427 9.15734 14.9301 6.84473 12.0874 6.84473Z" fill="black"/>
+                    <path d="M18.8066 4.51416C18.5133 4.51416 18.2745 4.75293 18.2745 5.04626C18.2745 5.3396 18.5133 5.57837 18.8066 5.57837C19.1001 5.57837 19.3389 5.33978 19.3389 5.04626C19.3389 4.75275 19.1001 4.51416 18.8066 4.51416Z" fill="black"/>
+                  </g>
+                  <defs>
+                    <clippath id="clip0_320_223">
+                      <rect
+                        width="24"
+                        height="24"
+                        fill="white"
+                        transform="translate(0.0874023)"
+                      />
+                    </clippath>
+                  </defs>
+                </svg>
               </a>
             </div>
           </div>
@@ -506,7 +533,7 @@
           </span>
 
           <span class="footer__author-title">
-            Copyright © 2019. All Rights Reserved.
+            Copyright © 2024. All Rights Reserved.
           </span>
         </div>
       </div>
