--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                 >
                   <circle
-                    class="gallery__circle"
+                    class="gallery__circle active"
                     cx="4.5"
                     cy="4.5"
                     r="4.5"
