add task solution #2

--- a/src/index.html
+++ b/src/index.html
@@ -384,10 +384,11 @@
               </p>
             </div>
             <form
-              action="#"
+              action="http://localhost:3000/api"
               method="post"
-              class="subscription__form"
+              name="send"
               onsubmit="this.reset(); return false;"
+              class="subscription__form"
             >
               <input
                 type="email"
@@ -546,7 +547,7 @@
 
         <div class="footer__credits credits">
           <p class="credits__text">Designed by Zhyriada Marina</p>
-          <p class="credits__text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="credits__text">Copyright © 2024. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
