--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     >
     <title>NAMU</title>
+    <link rel="shortcut icon" type="image/png" href="./images/favicon/logo.ico"/>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
@@ -363,7 +364,7 @@
 
             <div class="footer__social">
               <a
-                href="https://www.instagram.com/"
+                href="https://facebook.com/"
                 class="footer__link"
                 target="_blank"
               >
@@ -383,7 +384,7 @@
               </a>
 
               <a
-                href="https://uk-ua.facebook.com/"
+                href="https://www.instagram.com/"
                 class="footer__link"
                 target="_blank"
               >
