i dont deploy this change

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
       rel="stylesheet"
     >
     <title>NAMU</title>
-    <link rel="shortcut icon" type="image/png" href="./images/favicon/logo.ico"/>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./images/favicon/logo.ico"
+    />
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
