changes nav links

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                 <li class="nav__item">
                   <a
                     class="nav__link"
-                    href="#contact"
+                    href="#about-us"
                   >
                     Про Нас
                   </a>
@@ -80,7 +80,7 @@
                 <li class="nav__item">
                   <a
                     class="nav__link"
-                    href="#footer"
+                    href="#contacts"
                   >
                     Контакти
                   </a>
@@ -199,7 +199,7 @@
         </div>
       </section>
 
-      <section class="lecture">
+      <section class="lecture" id="about-us">
         <div class="container">
           <div class="lecture__wrap">
             <a
@@ -284,7 +284,7 @@
 
       <section
         class="subscribe"
-        id="contact"
+        id="contacts"
       >
         <div class="container">
           <div class="subscribe__wrap">
@@ -420,7 +420,7 @@
               <li class="nav__item">
                 <a
                   class="nav__link"
-                  href="#contact"
+                  href="#about-us"
                 >
                   Про Нас
                 </a>
@@ -436,7 +436,7 @@
               <li class="nav__item">
                 <a
                   class="nav__link"
-                  href="#footer"
+                  href="#contacts"
                 >
                   Контакти
                 </a>
