--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+  <!--#region-->
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,14 +7,273 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>НАМУ</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/logo.png"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+    />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!--#endregion-->
+  <body class="page">
+    <header class="header">
+      <div class="header-top">
+        <div class="header-top__container">
+          <a href="#menu" class="header-top__menu-link"></a>
+          <a href="#" class="header-top__logo"></a>
+        </div>
+      </div>
+      <div class="header-bottom">
+        <a href="#menu" class="header-top__menu-link-t"></a>
+        <h1 class="header-bottom__title">Художній музей</h1>
+        <button class="button-green">Квитки<a class="button-green__arrow"></a></button>
+      </div>
+    </header>
+    <!--#region-burger-->
+    <aside class="page__menu burger-menu" id="menu">
+      <div class="burger-menu__container">
+        <div class="burger-menu__top">
+          <a href="#html" class="burger-menu__close"></a>
+          <nav class="burger-nav">
+            <a href="#galary" class="burger-nav__item">Галерея</a>
+            <a href="#subscribe" class="burger-nav__item">Про Нас</a>
+            <a href="#events" class="burger-nav__item">Виставки та події</a>
+            <a href="#contacts" class="burger-nav__item">Контакти</a>
+          </nav>
+        </div>
+        <div class="burger-menu__line"></div>
+        <div class="burger-menu__bottom">
+          <div class="burger-menu__schedule">
+            <h5 class="burger-schedule__title">Графік роботи</h5>
+            <h5 class="burger-schedule__date">
+                12:00 - 20:00
+              <span>середа</span>
+            </h5>
+            <h5 class="burger-schedule__date">
+                12:00 - 20:00
+              <span>четвер</span>
+            </h5>
+            <h5 class="burger-schedule__date">
+                12:00 - 20:00
+              <span>п'ятниця</span>
+            </h5>
+            <h5 class="burger-schedule__date">
+                11:00 - 19:00
+              <span>субота</span>
+            </h5>
+            <h5 class="burger-schedule__date">
+                11:00 - 19:00
+              <span>неділя</span>
+            </h5>
+          </div>
+          <div class="burger-menu__info">
+            <h5 class="burger-menu__subtitle">
+              Вихідні:
+              <span>понеділок, вівторок
+                <br>Каса припиняє роботу за 1 годину
+                до закриття музею
+              </span>
+            </h5>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <!--#endregion-burger-->
+    <main class="main">
+      <section class="events" id="events">
+        <h1 class="events__title">Актуальні події</h1>
+        <article class="events-block">
+          <img
+            src="images/main/img-1.png"
+            alt="it`s an image"
+            class="events-block__img"
+          >
+          <div class="events-block__exhibition">
+            <label>Виставка</label>
+            <h3>26.08-29.11.2019</h3>
+          </div>
+          <h2>Йду і повертаюсь
+            <img
+              src="images/rectangle/rectangle.png"
+              alt="it`s an image"
+              class="rectangle"
+            >
+          </h2>
+          <p>Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+        </article>
+        <article class="events-block">
+          <img
+            src="images/main/img-2.png"
+            alt="it`s an image"
+            class="events-block__img"
+          >
+          <div class="events-block__exhibition">
+            <label>Виставка</label>
+            <h3>26.08-29.11.2019</h3>
+          </div>
+          <h2>І спогади і мрії
+            <img
+              src="images/rectangle/rectangle.png"
+              alt="it`s an image"
+              class="rectangle"
+            >
+          </h2>
+          <p>Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+        </article>
+      </section>
+      <section class="lection" id="lection">
+        <div class="lection__img">
+          <img
+            src="images/main/img-3.png"
+            alt="it`s an image"
+            class="lection__background"
+          >
+        </div>
+        <article class="lection__block">
+          <div class="lection__legend">
+            <label class="lection__subtitle">Лекція</label>
+            <h3>26/08/2019 - 11:00</h3>
+          </div>
+          <h2>Від класицизму до романтизму</h2>
+        </article>
+
+      </section>
+      <section class="galary" id="galary">
+        <h1 class="title__galary">Галерея</h1>
+        <div class="wrapper">
+          <div class="slider single-item">
+            <div class="slider__item">
+              <img
+                class="slider__img"
+                src="images/slider/slider-1.png"
+                alt="it`s an image"
+              >
+            </div>
+            <div class="slider__item">
+              <img
+                class="slider__img"
+                src="images/slider/slider-5.png"
+                alt="it`s an image"
+              >
+            </div>
+            <div class="slider__item">
+              <img
+                class="slider__img"
+                src="images/slider/slider-3.png"
+                alt="it`s an image"
+              >
+            </div>
+            <div class="slider__item">
+              <img
+                class="slider__img"
+                src="images/slider/slider-4.png"
+                alt="it`s an image"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="subscribe" id="subscribe">
+        <h1 class="subscribe__title">Підписка</h1>
+        <p class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <div class="subscribe__email">
+          <input
+            placeholder="E-mail"
+            type="email"
+            class="subscribe__input"
+          >
+          <button class="button-red__arrow"></button>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <section class="footer__block-1">
+        <a href="#" class="header-top__logo"></a>
+        <div class="footer__socialmedia">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/?locale=uk_UA"
+            class="footer__socialmedia-link facebook"
+          ></a>
+          <a
+            target="_blank"
+            href="https://www.instagram.com/"
+            class="footer__socialmedia-link instagram"
+          ></a>
+        </div>
+      </section>
+      <article class="footer__main">
+        <section class="footer__block-2">
+          <div class="burger-menu__schedule">
+            <h5 class="burger-schedule__title">Графік роботи</h5>
+            <h5 class="burger-schedule__date">12:00 — 20:00
+              <span>середа</span>
+            </h5>
+            <h5 class="burger-schedule__date">12:00 — 20:00
+              <span>четвер</span>
+            </h5>
+            <h5 class="burger-schedule__date">12:00 — 20:00
+              <span>п'ятниця</span>
+            </h5>
+            <h5 class="burger-schedule__date">11:00 — 19:00
+              <span>субота</span>
+            </h5>
+            <h5 class="burger-schedule__date">11:00 — 19:00
+              <span>неділя</span>
+            </h5>
+          </div>
+          <div class="burger-menu__info">
+            <span>Вихідні: понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </span>
+          </div>
+        </section>
+        <section class="footer__block-3">
+          <h5 class="burger-schedule__title">Контакти</h5>
+          <div class="footer__contacts" id="contacts">
+            <span>вул. <a href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4ce52445a8315:0x5e30ef474eddac89?sa=X&ved=1t:242&ictx=111" class="footer__contacts-link">М. Грушевського, 6; Київ, 01001</a></span>
+            <span>тел. <a href="tel:+380442781357" class="footer__contacts-link">+38 (044) 278-13-57</a></span>
+            <span>факс <a href="tel:+380442787454" class="footer__contacts-link">+38 (044) 278-74-54</a></span>
+            <span>e-mail: <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">info@namu.kiev.ua</a></span>
+          </div>
+        </section>
+      </article>
+      <a href="#" class="arrow__up"></a>
+      <hr>
+      <section class="footer__block-4">
+        <nav class="footer-nav">
+          <a href="#galary" class="footer-nav__item">Галерея</a>
+          <a href="#subscribe" class="footer-nav__item">Про Нас</a>
+          <a href="#events" class="footer-nav__item">Виставки та події</a>
+          <a href="#footer" class="footer-nav__item">Контакти</a>
+        </nav>
+      </section>
+      <section class="footer__bottom">
+        <p>Designed by Zhyriada Marina</p>
+        <p>Copyright © 2019. All Rights Reserved.</p>
+      </section>
+    </footer>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
