--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,6 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
   </head>
 
   <body>
@@ -224,7 +220,7 @@
         <div class="container">
           <h2 class="gallery__title">Галерея</h2>
 
-          <div class="swiper">
+          <div class="swiper gallery__swiper">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -453,39 +449,5 @@
     </footer>
 
     <script src="scripts/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script type="module">
-      import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs';
-
-      const swiper = new Swiper('.swiper', {
-        direction: 'horizontal',
-        loop: true,
-        slidesPerView: 1.2,
-        centeredSlides: true,
-        spaceBetween: 20,
-
-        pagination: {
-          el: '.swiper-pagination',
-          clickable: true,
-        },
-
-        autoplay: {
-          delay: 2000,
-          disableOnInteraction: false,
-        },
-
-        speed: 1500,
-
-        breakpoints: {
-          640: {
-            slidesPerView: 2.1,
-            centeredSlides: false,
-          },
-          1000: {
-            slidesPerView: 3.1,
-          },
-        },
-      });
-    </script>
   </body>
 </html>
